CaseConnect/src/objects/MappingV1ProjectsToSFProducts__c.object
<CustomObject>
    <fields>
        <fullName>SFProductId__c</fullName>
        <label>SalesForce Product Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFProductName__c</fullName>
        <label>SalesForce Product Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V1ProjectName__c</fullName>
        <label>VersionOne Project Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V1ProjectToken__c</fullName>
        <label>VersionOne Project Token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Mapping V1 project to SF product</label>
    <nameField>
        <label>Mapping V1 project to SF product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mappings V1 project to SF product</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>